--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <title>Salman Hanif</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" href="assets/iconn.png">
+        <link rel="icon" href="assets/icon.png">
     </head>
 
     <!-- Navigation Bar -->
